# HWHarness

./: .env.example  .gitignore  CLAUDE.md  LOOP.md  QA_SCENARIOS.md  README.md  SYSTEM_PROMPT_DESIGN.md  agent.py  bench_caching.py  chat.py  context.py  demo.py  qa_max_turns.py  server.py  session.py  skills.py
.claude/: settings.local.json
.claude/hooks/: check_agent.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: agent.rs  client.rs  config.rs  context.rs  lib.rs  main.rs  schedule.rs  session.rs  skills.rs  tools.rs
skills/: codeb_pages.md  file_ops.md  makeskill.md  python_functions.md
tests/: test_agent_loop.py
